# DuggerGitTools

./: .ai-rules  .env.example  .gitignore  .windsurfrules  AGENT_PROTOCOL.md  AUDIT_REPORT.md  ECOSYSTEM_DRIFT_ANALYSIS.md  ECOSYSTEM_EXCLUSIONS.txt  PROJECT_MAP.json  README.md  SYSTEM_HEALTH.md  TODO.md  TODO_REPORT.md  TODO_TRIAGE_REPORT.md  commit.py  dugger.yaml  dugger_core_base.py  global_dashboard.py  pyproject.toml
.kiro/: context.json
PLANNING/: PERSONA.md
dgt/: __init__.py  cli.py  cli_init.py
dgt/core/: __init__.py  architecture_mapper.py  assimilator.py  audit_manager.py  auto_fixer.py  capability_cache.py  chronicle_manager.py  config.py  doc_parser.py  docs_merger.py  enhanced_status.py  git_operations.py  gitignore_template.py  ide_bridge.py  lint_manager.py  message_generator.py  multi_provider_orchestrator.py  orchestrator.py  planning_sync.py  release_manager.py  rust_toolchain.py  schema.py  task_extractor.py  template_engine.py  templater.py  universal_auto_fixer.py  universal_message_generator.py  universal_rollback.py  universal_versioning.py  venv_manager.py  versioning.py
dgt/providers/: __init__.py  base.py  chrome.py  python.py  rust.py
dgt/scripts/: __init__.py  dgt_add.py  phase.py  todo.py
dgt/services/: __init__.py  documentation_service.py  release_service.py
examples/: chrome-extension.yaml  solana-hybrid.yaml
templates/chrome-extension/: README.md  (+1 more)
test-project/: .ai-rules  .gitignore  README.md  TODO.md  dugger.yaml  main.py
test_assimilation/: script.py
tests/: __init__.py  test_orchestrator.py  test_providers.py
(+10 files in other folders)
